<resources>
    <string name="app_name">QIBus</string>
    <string name="contentdescription">TODO</string>
    <string name="txt_todo">TODO</string>
    <string name="txt_high_hill_manali">High Hill Manali</string>
    <string name="txt_4_days_3_nights">4 Days 3 Nights</string>
    <string name="txt_new_package">New Packages</string>
    <string name="_500"><strike>$ 500</strike></string>
    <string name="txt_03_bus_available">4 Bus Available</string>
    <string name="text_seat">Seat</string>
    <string name="msg_shareapp">Hey check out my app at: https://play.google.com/store/apps/developer?id=TWOWORDS</string>
    <string name="send_to">Share using</string>
    <string name="txtYourCode">Your code:</string>
    <string name="txtTotalEarning">Total Earning</string>
    <string name="txt_your_link">Your Link :</string>
    <string name="text_get_100_when_your_friend_complete_trip_with_us">Get $100 when your friend completes a trip with us</string>
    <string name="hint_enter_your_contact_number">Enter Contact Number</string>
    <string name="lbl_email">Email :</string>
    <string name="txt_emailid">John@gmail.com</string>
    <string name="lbl_wallet">Refer friends, Earn wallet money</string>
    <string name="lbl_your_wallet_in_balance">Your Balance in the wallet</string>
    <string name="txt_visa">VISA</string>
    <string name="title_price">Price</string>
    <string name="text_confirmed">Confirmed</string>
    <string name="text_destination">Ahmedabad (Guj) To High Hill,Manali</string>
    <string name="hint_from_city">From City</string>
    <string name="hint_to_city">To City</string>
    <string name="txt_view_all">View all</string>
    <string name="txt_new_offers">New Offers</string>
    <string name="txt_popular_package">Popular Packages</string>
    <string name="title_email_notification_settings">Email Notification Settings</string>
    <string name="txt_email_notification">Email Notification</string>
    <string name="lbl_contact_number_settings">Contact Number Notification Settings</string>
    <string name="lbl_mobile_no">Mobile No :</string>
    <string name="lbl_number_notification">Number Notification</string>
    <string name="title_language_setting">Language Settings</string>
    <string name="lbl_language">Language :</string>
    <string name="txt_english_us">English-US</string>
    <string name="lbl_first_name">First Name :</string>
    <string name="lbl_last_name">Last Name :</string>
    <string name="lbl_gender">Gender :</string>
    <string name="title_edit_your_name">Edit Your Name</string>
    <string name="title_edit_your_contact">Edit Your Contact</string>
    <string name="lbl_total_fare">Total Fare</string>
    <string name="lbl_pnr_no">PNR No</string>
    <string name="txt_bustime">18:00</string>
    <string name="txt_time">8:00</string>
    <string name="txt_date">28-May-2019</string>
    <string name="tite_toolbar_cards">Cards</string>
<string name="lbl_help_support">Help and Support</string>
    <string name="hint_enter_your_emailid">Enter Your Email Id</string>
    <string name="txt_samay_travel_main_office">Samay Travel Main Office</string>
    <string name="txt_near_alim_chowk_manali">Near Alim Chowk,Manali</string>
    <string name="txt_ticket_no">Ticket No</string>
    <string name="msg_email_required">Email required</string>
    <string name="msg_email_valid">Enter Valid Email</string>
    <string name="msg_first_name">First name required</string>
    <string name="msg_last_name">Last name required</string>
    <string name="msg_mobile_number">Mobile number required</string>
    <string name="msg_email_id">Email Id required</string>
    <string name="hint_email">Enter Email ID</string>
    <string name="ahmedabad_guj_high_hill_manali">Ahmedabad(Guj)- High Hill,Manali,Gujarat India</string>
    <string name="volvo_bus">Volvo Bus</string>
    <string name="txtCancelled">Cancelled</string>
    <string name="txtColon">:</string>
    <string name="search">Search</string>
    <string name="lbl_special">SPECIAL</string>
    <string name="lbl_use_code">Use Code:</string>
    <string name="lbl_notification">Notification</string>
    <string name="lbl_verification">Enter your verification code \n we have just sent you on your mobile number</string>
    <string name="txt_verify">Verify</string>
    <string name="txt_Resend">Re-send</string>
    <string name="lbl_StarRatings">Star Ratings</string>
    <string name="txt_BusType">Bus Type</string>
    <string name="lbl_Apply">Apply</string>
    <string name="text_you_want_to">Welcome to</string>
    <string name="text_travel">QIBUS</string>
    <string name="hint_mobile">Enter Mobile Number</string>
    <string name="lbl_continue">Continue</string>
    <string name="text_signinwith">Sign In With</string>
    <string name="verification">Verification</string>
    <string name="refere_and_earn">Refer &amp; Earn</string>
    <string name="profile_settings">Edit Profile</string>
    <string name="lbl_profile_settings">Edit Profile</string>
    <string name="lbl__wallet">Wallet</string>
    <string name="lbl_cards">Cards</string>
    <string name="lbl_help">Help</string>
    <string name="lbl_2342340">2342340</string>
    <string name="lbl_submit">Submit</string>
    <string name="home">Home</string>
    <string name="text_book_now">Book Now</string>
    <string name="text_contact_information">Contact Information</string>
    <string name="text_phone">Phone :</string>
    <string name="txt_passenger">Passenger: </string>
    <string name="hint_enter_name">Enter Name</string>
    <string name="hint_enter_age">Enter Age</string>
    <string name="hint_card_number">Card Number</string>
    <string name="_200">$200.00</string>
    <string name="_1">1</string>
    <string name="text_select_month">Month</string>
    <string name="text_select_year">Year</string>
    <string name="text_card_holder_name">Card Holder Name</string>
    <string name="text_valid">Valid</string>
    <string name="lbl_ac">AC</string>
    <string name="lbl_non_ac">NON-AC</string>
    <string name="lbl_sleeper">SLEEPER</string>
    <string name="lbl_seater">SEATER</string>
    <string name="lbl_payment">Payment</string>
    <string name="txt_cancelled">Cancelled</string>
    <string name="text_available">Available</string>
    <string name="text_booked">Booked</string>
    <string name="text_pickup_point">Pickup point</string>
    <string name="text_dropping_points">Dropping point</string>
    <string name="text_selected">Selected</string>
    <string name="lbl_35">$35</string>
    <string name="smith_travels">Smith travels</string>
    <string name="text_net_banking">Net Banking</string>
    <string name="text_offers">Offers</string>
    <string name="text_credit_card">Credit Card</string>
    <string name="text_debit">Debit Cart</string>
    <string name="text_Mobilewallet">Mobile Wallet</string>
    <string name="text_bus_list">Buses</string>
    <string name="hint_enter_first_name">Enter First Name</string>
    <string name="hint_enter_last_name">Enter Last Name</string>
    <string name="text_save">Save</string>
    <string name="text_ticket_book">Paynow</string>
    <string name="text_total_amount">Total Amount</string>
    <string name="txt_copy">Copied</string>
    <string name="text_offercode">Offer Code</string>
    <string name="text_package">Package</string>
    <string name="msg_from">From city required</string>
    <string name="msg_to">To city required</string>
    <string name="msg_name">Name required</string>
    <string name="ms_age">Age required</string>
    <string name="msg_digit">Card Number required</string>
    <string name="msg_code">Code required</string>
    <string name="msg_holdername">Holder Name required</string>
    <string name="text_hour">Hour</string>
    <string name="rs">$ </string>
    <string name="text_link">www.bus.com/refer/234556F</string>
    <string name="text_remove">Item was removed from the list.</string>
    <string name="text_undo">UNDO</string>
    <string name="title_add_new_card">Add new card</string>
    <string name="title_wallet">Wallet</string>
    <string name="text_trending_packages">Trending Packages</string>
    <string name="text_description">Description</string>
    <string name="text_upper">Upper</string>
    <string name="text_lower">Lower</string>
    <string name="text_ladies">Ladies</string>
    <string name="text_logout">Logout</string>
    <string name="text_100">0</string>
    <string name="text_500">500</string>
    <string name="msg_saved">Saved</string>
    <string name="text_confirmation">Confirmation!</string>
    <string name="msg_logout">Are you sure, you want to logout?</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_totalseat">Total Seat:</string>
    <string name="text_cvv">CVV</string>
    <string name="text_seat_no">Seat No</string>
    <string name="_5">/5</string>
    <string name="text_5">5</string>
    <string name="text_addcard">Add Card</string>
    <string name="text_settings">Settings</string>
    <string name="text_select_bus">Select Seat</string>
    <string name="text_hold">Hold</string>
    <string name="text_ticket_price">Ticket Price :</string>
    <string name="text_tax">Tax :</string>
    <string name="text_5txt">$5</string>
    <string name="text_total_price">Total:</string>
    <string name="text__2">2</string>
    <string name="text_mobile">+91 9988998899</string>
    <string name="text_duration">Duration</string>
    <string name="text_payment">Payment</string>
    <string name="text_done">Done</string>
    <string name="text_payment_success">Payment Success !</string>
    <string name="text_close">Close</string>
    <string name="text_cardadd">Card Added</string>
    <string name="msg_success">Thank you for booking. Enjoy your trip</string>
    <string name="text_recent_search">Recent Search</string>
    <string name="text_am">AM</string>
    <string name="text_pm">PM</string>
    <string name="text_city">Holds</string>
    <string name="lbl_pickup1">Pickup 1</string>
    <string name="lbl_location1">Landmark</string>
    <string name="lbl_duration1">23:20</string>
    <string name="lbl_pickup2">Pickup 2</string>
    <string name="lbl_dropping1">Dropping 1</string>
    <string name="lbl_droppin2">Dropping 2</string>
    <string name="lbl_offer1">SUPERTRIP</string>
    <string name="lbl_offer2">SPECIAL</string>
    <string name="lbl_DelhiToMubai">New Delhi To Mumbai</string>
    <string name="lbl_MumbaiToPune">Mumbai To Pune</string>
    <string name="lbl_AhmedabadToMumbai">Ahmedabad To Mumbai</string>
    <string name="lbl_JaipurToNewDelhi">Jaipur To New Delhi</string>
    <string name="lbl_MumbaiToSurat">Mumbai to Surat</string>
    <string name="lbl_date">28-05-2019</string>
    <string name="lbl_mumbai">Mumbai</string>
    <string name="lbl_surat">Surat</string>
    <string name="lbl_delhi">Delhi</string>
    <string name="lbl_pune">Pune</string>
    <string name="lbl_booking_duration1">28</string>
    <string name="lbl_booking_duration2">22</string>
    <string name="lbl_booking_starttime1">1:00</string>
    <string name="lbl_booking_starttime2">1:00</string>
    <string name="lbl_booking_totaltime1">8</string>
    <string name="lbl_booking_endtime1">8:00</string>
    <string name="lbl_booking_endtime2">8:00</string>
    <string name="lbl_booking_SeatNo1">2,8</string>
    <string name="lbl_booking_totalfare1">250</string>
    <string name="lbl_booking_totalfare2">250</string>
    <string name="lbl_booking_pnr1">4325435354</string>
    <string name="lbl_booking_pnr21">4325435354</string>
    <string name="lbl_booking_ticketno1">KH4325435354</string>
    <string name="lbl_card_digit1">6253</string>
    <string name="lbl_card_digit2">5686</string>
    <string name="lbl_card_digit3">5623</string>
    <string name="txt_user_name">John</string>
    <string name="title_dropping">Pickup - Dropping Point</string>
</resources>