<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@drawable/bg_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        android:theme="@style/Toolbar"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/ic_left_arrow_white"
                android:contentDescription="@string/txt_todo"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_toEndOf="@+id/ivBack"
                android:layout_toStartOf="@id/ivNotification"
                android:fontFamily="@font/googlesansextrabold"
                android:text="@string/lbl_help"
                android:textColor="@color/white"
                android:textSize="@dimen/font_mlarge" />
            <include
                layout="@layout/layout_addnotification" />
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginBottom="@dimen/bg_decrease20dp"
        android:background="@drawable/bg_card"
        android:orientation="vertical">


        <EditText
            android:id="@+id/edContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/bg_rounded_border_edittext"
            android:fontFamily="@font/googlesansregular"
            android:hint="@string/hint_enter_your_contact_number"
            android:inputType="number"
            android:padding="@dimen/spacing_large"
            android:textColor="@color/textchild"
            android:textSize="@dimen/font_large" />


        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/bg_rounded_border_edittext"
            android:fontFamily="@font/googlesansregular"
            android:hint="@string/hint_enter_your_emailid"
            android:inputType="textEmailAddress"
            android:padding="@dimen/spacing_large"
            android:textColor="@color/textchild"
            android:textSize="@dimen/font_large" />


        <EditText
            android:id="@+id/edMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_medium"
            android:layout_marginTop="@dimen/spacing_medium"
            android:layout_marginEnd="@dimen/spacing_medium"
            android:background="@drawable/bg_rounded_border_edittext"
            android:fontFamily="@font/googlesansregular"
            android:gravity="top"
            android:hint="@string/text_description"
            android:inputType="textMultiLine"
            android:lines="4"
            android:padding="@dimen/spacing_large"
            android:textColor="@color/textchild"
            android:textSize="@dimen/font_large" />


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_medium"
            android:background="@drawable/bg_btn_shape"
            android:fontFamily="@font/googlesansbold"
            android:text="@string/lbl_submit"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />
    </LinearLayout>
</RelativeLayout>