<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_medium"
        app:cardElevation="@dimen/card_shadow"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spacing_large"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_mlarge"
                android:layout_marginEnd="@dimen/spacing_mlarge"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="@dimen/img_height"
                    android:layout_height="@dimen/img_height"
                    android:contentDescription="@string/txt_todo"
                    android:padding="@dimen/spacing_medium"
                    android:src="@drawable/ic_checkbox_circle_line"
                    android:tint="@color/color_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/googlesansbold"
                    android:text="@string/text_payment_success"
                    android:textColor="@color/textheader"
                    android:textSize="@dimen/font_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:layout_marginBottom="@dimen/spacing_medium"
                    android:fontFamily="@font/googlesansregular"
                    android:text="@string/msg_success"
                    android:textColor="@color/textchild"
                    android:textSize="@dimen/font_medium" />

            </LinearLayout>

            <Button
                android:id="@+id/btnClose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:background="@color/color_check"
                android:fontFamily="@font/googlesansbold"
                android:paddingTop="@dimen/spacing_xsmall"
                android:paddingBottom="@dimen/spacing_medium"
                android:shadowColor="@color/blue"
                android:text="@string/text_close"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/font_large" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</RelativeLayout>