<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_medium"
        android:layout_marginBottom="@dimen/spacing_medium"
        app:cardCornerRadius="@dimen/spacing_small"
        app:cardElevation="@dimen/card_shadow">

        <RelativeLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:padding="@dimen/spacing_medium">

            <TextView
                android:id="@+id/tvTravelName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/googlesansbold"
                android:textColor="@color/textheader"
                android:textSize="@dimen/font_large"
                android:layout_toStartOf="@id/tvTime"
                tools:text="@string/txt_high_hill_manali" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/googlesansbold"
                android:gravity="end"
                android:textColor="@color/textheader"
                android:textSize="@dimen/font_large"
                tools:text="@string/txt_bustime" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTravelName"
                android:layout_marginTop="@dimen/spacing_small"
                android:fontFamily="@font/googlesansregular"
                android:gravity="end"
                android:textColor="@color/textchild"
                tools:text="@string/txt_near_alim_chowk_manali" />
        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>