<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/app_background"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/view_height"
        android:background="@drawable/bg_toolbar" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        android:theme="@style/Toolbar"
        android:visibility="visible"
        app:contentInsetStart="0dp"
        app:titleTextColor="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:padding="@dimen/spacing_medium"
                android:src="@drawable/ic_left_arrow_white"
                android:contentDescription="@string/txt_todo"/>

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_toEndOf="@+id/ivBack"
                android:fontFamily="@font/googlesansextrabold"
                android:text="@string/title_dropping"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="@dimen/font_mlarge" />

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/bg_card">
    <LinearLayout
        android:id="@+id/llOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPickup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:background="@drawable/bg_leftswitch_select"
            android:fontFamily="@font/googlesansbold"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/text_pickup_point"
            android:textColor="@color/white"
            android:textSize="@dimen/font_large" />

        <TextView
            android:id="@+id/tvDropping"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xsmall"
            android:layout_weight="1"
            android:background="@drawable/bg_rightswitch"
            android:fontFamily="@font/googlesansbold"
            android:gravity="center"
            android:paddingTop="@dimen/spacing_medium"
            android:paddingBottom="@dimen/spacing_medium"
            android:text="@string/text_dropping_points"
            android:textColor="@color/textheader"
            android:textSize="@dimen/font_large" />

    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPickup"
        android:layout_width="match_parent"
        android:overScrollMode="never"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:clipToPadding="true"
        android:layout_below="@id/llOffer"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDropping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_medium"
        android:clipToPadding="true"
        android:overScrollMode="never"
        android:layout_below="@id/llOffer"
        android:visibility="gone" />
    </RelativeLayout>
</RelativeLayout>